[tool.poetry]
name = "dbt2looker"
version = "0.11.0"
description = "Generate lookml view files from dbt models"
authors = ["oliverlaslett <oliver@gethubble.io>", "chaimturkel <cyturel@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/hubble-data/dbt2looker"
repository = "https://github.com/hubble-data/dbt2looker"

[tool.poetry.dependencies]
python = ">=3.8"
lkml = ">=1.1"
pydantic = ">=1.8"
PyYAML = ">=5"
typing-extensions = ">=4.0"
importlib-metadata = ">=4"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
types-pyyaml = "^6.0.12.20240311"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dbt2looker = 'dbt2looker.cli:run'
